--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Octopus | Overview 01</title>
 
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css">
 
     <!-- custom css -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fredyapps/octopus_js/public/assets/css/style.css">
 </head>
 
 <body>
@@ -23,10 +23,32 @@
 
  
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="./assets/js/popper.min.js"></script>
-    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.6.0/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js"></script>
+    <script>
+      $(function () {
+          $(".progress").each(function () {
+              var value = $(this).attr('data-value');
+              var left = $(this).find('.progress-left .progress-bar');
+              var right = $(this).find('.progress-right .progress-bar');
+              // var valueEl = $(this).find('.progress-value d-flex justify-content-center align-items-center');
 
-   
+              if (value > 0) {
+                  // valueEl.text(value);
+                  if (value <= 50) {
+                      right.css('transform', 'rotate(' + percentageToDegrees(value) + 'deg)')
+                  } else {
+                      right.css('transform', 'rotate(180deg)')
+                      left.css('transform', 'rotate(' + percentageToDegrees(value - 50) + 'deg)')
+                  }
+              }
+          })
+
+          function percentageToDegrees(percentage) {
+              return percentage / 100 * 360
+          }
+      });
+  </script>
 
 </body>
 
