--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Octopus | Overview 01</title>
 
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 
     <!-- custom css -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fredyapps/octopus_js/public/assets/css/style2.css">
 </head>
 
 <body>
